--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=C:\\Users\\benne\\AppData\\Local\\Android\\sdk
 flutter.sdk=P:\\Frameworks\\flutter_windows_v1.9.1+hotfix.4-stable\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
