--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_ml_vision: ^0.9.10
+  firebase_core: ^0.5.1
+  path_provider: ^1.6.24
+  sliding_up_panel: ^1.0.2
+  intl: ^0.17.0
+  date_time_picker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
