refactor(architecture): apply clean architecture

--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,10 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+node_modules/
+
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # Freeline
 freeline.py
