--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,16 +23,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_ml_vision: ^0.9.10
+  firebase_ml_vision: ^0.12.0
   firebase_core: ^0.5.1
-  path_provider: ^1.6.24
-  sliding_up_panel: ^1.0.2
+  path_provider: ^2.0.2
+  sliding_up_panel: ^2.0.0+1
   intl: ^0.17.0
   date_time_picker: ^2.0.0
+  flutter_bloc: ^7.0.1
+  equatable: ^2.0.3
+  dartz: ^0.10.0-nullsafety.0
+  uuid: ^3.0.4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  get_it: ^7.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.1
+  hive_generator: ^1.1.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -49,31 +58,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+ 
