--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,7 +29,7 @@ dependencies:
   firebase_core: ^0.5.1
   path_provider: ^2.0.2
   sliding_up_panel: ^2.0.0+1
-  intl: ^0.17.0
+  intl: ^0.17.0-nullsafety.2
   date_time_picker: ^2.0.0
   flutter_bloc: ^7.0.1
   equatable: ^2.0.3
@@ -36,7 +38,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   get_it: ^7.1.3
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
