--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "de.bennet.fahrtenbuch"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -62,11 +62,11 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+  //  implementation platform('com.google.firebase:firebase-bom:26.2.0')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'    
-    implementation 'com.google.android.gms:play-services-vision:20.1.2'
-    implementation 'com.google.android.gms:play-services-vision-common:19.0.2'
-    implementation 'com.google.android.gms:play-services-vision-image-label:18.1.0'
+//     implementation 'com.google.android.gms:play-services-vision:20.1.2'
+//     implementation 'com.google.android.gms:play-services-vision-common:19.1.2'
+//     implementation 'com.google.android.gms:play-services-vision-image-label:18.1.0'
 }
