--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_ml_kit: ^0.6.0
   #firebase_ml_vision: ^0.9.10 #^0.12.0
   firebase_core: ^1.4.0
+  csv: ^5.0.0
   path_provider: ^2.0.2
   sliding_up_panel: ^2.0.0+1
   intl: ^0.17.0-nullsafety.2
@@ -27,13 +28,15 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   get_it: ^7.1.3
-  image_picker: ^0.8.1+4
+  image_picker: ^0.8.1+4  
+  month_picker_dialog: ^0.4.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.1
   hive_generator: ^1.1.0
+  mockito: ^5.0.12
 
 
 flutter:
