--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter  
 
   cupertino_icons: ^0.1.2
+  downloads_path_provider: ^0.1.0
   google_ml_kit: ^0.6.0
   #firebase_ml_vision: ^0.9.10 #^0.12.0
   firebase_core: ^1.4.0
