--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   get_it: ^7.1.3
   image_picker: ^0.8.1+4  
   month_picker_dialog: ^0.4.0
+  geocoding: ^2.0.0
+  exif: ^3.0.0
   
 dev_dependencies:
   flutter_test:
