--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fahrtenbuch
 description: A new Flutter project.
 
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,8 +12,7 @@ dependencies:
   flutter_localizations: 
     sdk: flutter  
 
-  cupertino_icons: ^0.1.2
-  downloads_path_provider: ^0.1.0
+  #cupertino_icons: ^0.1.2
   google_ml_kit: ^0.6.0
   #firebase_ml_vision: ^0.9.10 #^0.12.0
   firebase_core: ^1.4.0
