--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,13 @@ jobs:
     - run: flutter analyze .
     
     # Run widget tests for our flutter project.
-    #- run: flutter test
+    - run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - run: flutter build apk --split-per-abi
     
-    # Upload generated apk to the artifacts.
-    - uses: actions/upload-artifact@v1
+    - name: Push APK to Releases
+      uses: ncipollo/release-action@v1
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        artifacts: "build/app/outputs/apk/release/*.apk"
+        token: ${{ secrets.TOKEN }}
