--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Flutter CI
+name: Build & Release
 
 # This workflow is triggered on pushes to the repository.
 
@@ -40,8 +40,16 @@ jobs:
     - run: flutter test
     
     # Build apk.
-    - run: flutter build apk --split-per-abi
-    
+    - name: Build 
+      run: |
+        mkdir $HOME/private
+        gpg --quiet --batch --yes --decrypt --passphrase="$FIREBASE_SECRET" \
+        --output $HOME/private/services.tar services.tar.gpg
+        tar xvf $HOME/private/services.tar
+        flutter build apk --split-per-abi
+      env:
+        FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }
+      
     - name: Push APK to Releases
       uses: ncipollo/release-action@v1
       with:
