--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ name: Build & Release
 
 on:
   push:
-    branches:
-    - master
+    tags:
+      - "v*.*.*"
     
 # on: push    # Default will running for every branch.
     
@@ -24,8 +24,19 @@ jobs:
     # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
+    
+    - uses: olegtarasov/get-tag@v2 # that generate $GIT_TAG_NAME env
+      id: tagName
+      with:
+        tagRegex: 'v([0-9]+.[0-9]+.[0-9]+\+[0-9]+)' # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
+        tagRegexGroup: 1 # Optional. Default is 1.
+
+    - name: Replace YAML version with tag version
+      run: |
+        sed -i 's/99.99.99+99/'$GIT_TAG_NAME'/g' pubspec.yaml|
+        echo "Tag used version:"$GIT_TAG_NAME
     
     # Get flutter dependencies.
     - run: flutter pub get
