--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,8 @@ jobs:
       with:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-    
-    - uses: olegtarasov/get-tag@v2 # that generate $GIT_TAG_NAME env
-      id: tagName
-      with:
-        tagRegex: 'v([0-9]+.[0-9]+.[0-9]+)' # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
-        tagRegexGroup: 1 # Optional. Default is 1.
+    - name: Get the tag name
+      run: echo "GIT_TAG_NAME=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
     - name: Replace YAML version with tag version
       run: |
