--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ node_modules/
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+GoogleService-Info.plist
 
 # Freeline
 freeline.py
