--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,19 @@ jobs:
       with:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-    - name: Get the tag name
-      run: echo "GIT_TAG_NAME=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+        
+    - name: Decode android/keystore.jks
+      run: echo "${{ secrets.KEYSTORE_JKS_PROD }}" | base64 --decode > android/keystore.jks
+
+    - name: Decode android/key.properties
+      run: echo "${{ secrets.KEY_PROPERTIES_PROD }}" | base64 --decode > android/key.properties
+        
+    - name: Get tag name
+      uses: olegtarasov/get-tag@v2 # that generate $GIT_TAG_NAME env
+      id: tagName
+      with:
+        tagRegex: 'v([0-9]+.[0-9]+.[0-9]+\+[0-9]+)' # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
+        tagRegexGroup: 1 # Optional. Default is 1.
 
     - name: Replace YAML version with tag version
       run: |
