--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   month_picker_dialog: ^0.4.0
   geocoding: ^2.0.0
   exif: ^3.0.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
