--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.gitignore.io/api/android,flutter,androidstudio
+
+.vscode/launch.json
