--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geocoding: ^2.0.0
   exif: ^3.0.0
   http: ^0.13.5
+  permission_handler: ^4.0.0
 
 dev_dependencies:
   flutter_test:
