--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fahrtenbuch
 description: A new Flutter project.
 
-version: 1.1.10
+version: 1.1.11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -36,6 +36,7 @@ dependencies:
   exif: ^3.0.0
   http: ^0.13.5
   permission_handler: ^4.0.0
+  firebase_crashlytics: ^2.1.1
 
 dev_dependencies:
   flutter_test:
